# ZPlugin_remeshWithDualContouring

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  build.sh  main.cpp  vcpkg.json  x64-osx-mojave.cmake
ZPlugs64/: remeshWithDualContouring.txt  remeshWithDualContouring.zsc
ZPlugs64/remeshWithDualContouring_2022/: remeshWithDualContouring.lib  remeshWithDualContouring.txt  remeshWithDualContouring.zsc
ZPlugs64/remeshWithDualContouring_2022/lang/: remeshWithDualContouring_2022_en.xml  remeshWithDualContouring_2022_jp.xml
plugin/: CMakeLists.txt
plugin/include/: readGoZAndTriangulate.h  remesh.h  remeshWithDualContouring.h
plugin/src/: readGoZAndTriangulate.cpp  remesh.cpp  remeshWithDualContouring.cpp
